--- a/bower.json
+++ b/bower.json
@@ -16,10 +16,14 @@
     "angular-ui-router": "0.2.13",
     "famous-angular": "0.5.0",
     "font-awesome": "4.2.0",
-    "angular-bootstrap": "0.12.0",  
-    "bootstrap": "3.3.1"
+    "angular-bootstrap": "0.12.0",
+    "bootstrap": "3.3.1",
+    "angular-material": "master",
+    "angularfire": "~0.9.2",
+    "angular-file-upload": "~1.1.5"
   },
   "resolutions": {
-    "angular": "1.3.6"
+    "angular": "~1.2.11",
+    "angular-material": "~0.7.1"
   }
 }
