--- a/package.json
+++ b/package.json
@@ -98,7 +98,10 @@
     "angular-sanitize": "./bower_components/angular-sanitize/angular-sanitize.js",
     "famous": "./bower_components/famous/dist/famous-global.js",
     "famous-angular": "./bower_components/famous-angular/dist/famous-angular.js",
-    "angular-bootstrap": "./bower_components/angular-bootstrap/ui-bootstrap-tpls.js"
+    "angular-bootstrap": "./bower_components/angular-bootstrap/ui-bootstrap-tpls.js",
+    "angular-aria": "./bower_components/angular-aria/angular-aria.min.js",
+    "hammerjs": "./bower_components/hammerjs/hammer.min.js",
+    "ngMaterial": "./bower_components/angular-material/angular-material.js"
   },
   "browserify": {
     "transform": [
@@ -143,6 +146,23 @@
         "angular"
       ],
       "exports": "angular.module('ui.bootstrap').name"
+    },
+    "hammerjs": {
+      "exports": "global:Hammer"
+    },
+    "angular-animate": {
+      "depends": [
+        "hammerjs:Hammer"
+      ]
+    },
+    "ngMaterial": {
+      "exports": "ngMaterial",
+      "depends": [
+        "hammerjs",
+        "angular",
+        "angular-animate",
+        "angular-aria"
+      ]
     }
   }
 }
