--- a/bower.json
+++ b/bower.json
@@ -9,21 +9,21 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "1.3.6",
-    "angular-mocks": "1.3.6",
-    "angular-animate": "1.3.6",
-    "angular-sanitize": "1.3.6",
+    "angular": "1.3.11",
+    "angular-mocks": "1.3.11",
+    "angular-animate": "1.3.11",
+    "angular-sanitize": "1.3.11",
     "angular-ui-router": "0.2.13",
-    "famous-angular": "0.5.0",
+    "famous-angular": "0.5.2",
     "font-awesome": "4.2.0",
     "angular-bootstrap": "0.12.0",
     "bootstrap": "3.3.1",
     "angular-material": "master",
     "angularfire": "~0.9.2",
-    "angular-file-upload": "~1.1.5"
+    "angular-file-upload": "~1.1.5",
+    "hammerjs": "~2.0.4"
   },
   "resolutions": {
-    "angular": "~1.2.11",
-    "angular-material": "~0.7.1"
+    "angular": "1.3.x"
   }
 }
