--- a/package.json
+++ b/package.json
@@ -94,14 +94,14 @@
     "angular": "./bower_components/angular/angular.js",
     "angular-mocks": "./bower_components/angular-mocks/angular-mocks.js",
     "angular-ui-router": "./bower_components/angular-ui-router/release/angular-ui-router.js",
-    "angular-animate": "./bower_components/angular-animate/angular-animate.js",
+    "ngAnimate": "./bower_components/angular-animate/angular-animate.js",
     "angular-sanitize": "./bower_components/angular-sanitize/angular-sanitize.js",
     "famous": "./bower_components/famous/dist/famous-global.js",
     "famous-angular": "./bower_components/famous-angular/dist/famous-angular.js",
     "angular-bootstrap": "./bower_components/angular-bootstrap/ui-bootstrap-tpls.js",
     "angular-aria": "./bower_components/angular-aria/angular-aria.min.js",
     "hammerjs": "./bower_components/hammerjs/hammer.min.js",
-    "ngMaterial": "./bower_components/angular-material/angular-material.js"
+    "ngMaterial": "./bower_components/angular-material/angular-material.min.js"
   },
   "browserify": {
     "transform": [
@@ -136,7 +136,7 @@
         "famous-polyfills",
         "famous",
         "angular",
-        "angular-animate",
+        "ngAnimate",
         "angular-sanitize",
         "angular-ui-router"
       ]
@@ -150,7 +150,7 @@
     "hammerjs": {
       "exports": "global:Hammer"
     },
-    "angular-animate": {
+    "ngAnimate": {
       "depends": [
         "hammerjs:Hammer"
       ]
@@ -160,7 +160,7 @@
       "depends": [
         "hammerjs",
         "angular",
-        "angular-animate",
+        "ngAnimate",
         "angular-aria"
       ]
     }
