--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,8 @@
     "angular-material": "master",
     "angularfire": "~0.9.2",
     "angular-file-upload": "~1.1.5",
-    "hammerjs": "~2.0.4"
+    "hammerjs": "~2.0.4",
+    "mdi": "master"
   },
   "resolutions": {
     "angular": "1.3.x"
