--- a/bower.json
+++ b/bower.json
@@ -22,7 +22,9 @@
     "angularfire": "~0.9.2",
     "angular-file-upload": "~1.1.5",
     "hammerjs": "~2.0.4",
-    "mdi": "master"
+    "mdi": "master",
+    "ng-file-upload": "~2.2.2",
+    "ng-file-upload-shim": "~2.2.2"
   },
   "resolutions": {
     "angular": "1.3.x"
