--- a/bower.json
+++ b/bower.json
@@ -25,9 +25,13 @@
     "mdi": "master",
     "ng-file-upload": "~2.2.2",
     "ng-file-upload-shim": "~2.2.2",
-    "angular-masonry-directive": "*"
+    "angular-sir-trevor": "~0.1.0",
+    "sir-trevor-js": "~0.4.3",
+    "ng-tag-editor": "https://github.com/xzegga/ngTagEditor.git",
+    "angular-youtube-mb": "~0.1.6",
+    "angular-embedly": "~0.0.6"
   },
   "resolutions": {
-    "angular": "1.3.x"
+    "angular": "~1.2.18"
   }
 }
