--- a/package.json
+++ b/package.json
@@ -101,9 +101,15 @@
     "angular-bootstrap": "./bower_components/angular-bootstrap/ui-bootstrap-tpls.js",
     "angular-aria": "./bower_components/angular-aria/angular-aria.min.js",
     "hammerjs": "./bower_components/hammerjs/hammer.min.js",
-    "ngMaterial": "./bower_components/angular-material/angular-material.min.js",
+    "ngMaterial": "./bower_components/angular-material/angular-material.js",
     "ngFileUpload-shim": "./bower_components/ng-file-upload-shim/ng-file-upload-shim.min.js",
-    "ngFileUpload": "./bower_components/ng-file-upload/ng-file-upload.min.js"
+    "ngFileUpload": "./bower_components/ng-file-upload/ng-file-upload.min.js",
+    "firebase": "./bower_components/firebase/firebase.js",
+    "angularfire": "./bower_components/angularfire/dist/angularfire.min.js",
+    "angular-sir-trevor": "./bower_components/angular-sir-trevor/angular-sir-trevor.js",
+    "ngTagEditor": "./bower_components/ng-tag-editor/ngTagEditor.js",
+    "angular-youtube-embed": "./bower_components/angular-youtube-mb/dist/angular-youtube-embed.min.js",
+    "angular-embedly": "./bower_components/angular-embedly/em-minified/angular-embedly.min.js"
 
   },
   "browserify": {
@@ -171,6 +177,13 @@
       "exports": "ngFileUpload",
       "depends": [
         "angular"
+      ]
+    },
+    "angularfire": {
+      "exports": "angularfire",
+      "depends": [
+        "angular",
+        "firebase"
       ]
     }
   }
