--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,11 @@
     "angular-mocks": "1.3.6",
     "angular-animate": "1.3.6",
     "angular-sanitize": "1.3.6",
-    "angular-ui-router": "0.2.13"
+    "angular-ui-router": "0.2.13",
+    "angular-material": "master",
+    "angularfire": "~0.9.2",
+    "hammerjs": "~2.0.4",
+    "mdi": "master"
   },
   "resolutions": {
     "angular": "1.3.6"
