--- a/package.json
+++ b/package.json
@@ -92,7 +92,7 @@
     "angular": "./bower_components/angular/angular.js",
     "angular-mocks": "./bower_components/angular-mocks/angular-mocks.js",
     "angular-ui-router": "./bower_components/angular-ui-router/release/angular-ui-router.js",
-    "angular-animate": "./bower_components/angular-animate/angular-animate.js",
+    "ngAnimate": "./bower_components/angular-animate/angular-animate.js",
     "angular-sanitize": "./bower_components/angular-sanitize/angular-sanitize.js",
     "angular-aria": "./bower_components/angular-aria/angular-aria.min.js",
     "hammerjs": "./bower_components/hammerjs/hammer.min.js",
