got firebase into feed view

--- a/package.json
+++ b/package.json
@@ -96,7 +96,9 @@
     "angular-sanitize": "./bower_components/angular-sanitize/angular-sanitize.js",
     "angular-aria": "./bower_components/angular-aria/angular-aria.min.js",
     "hammerjs": "./bower_components/hammerjs/hammer.min.js",
-    "ngMaterial": "./bower_components/angular-material/angular-material.min.js"
+    "ngMaterial": "./bower_components/angular-material/angular-material.min.js",
+    "angularfire": "./bower_components/angularfire/dist/angularfire.min.js",
+    "firebase": "./bower_components/firebase/firebase.js"
   },
   "browserify": {
     "transform": [
@@ -138,6 +140,13 @@
         "angular",
         "ngAnimate",
         "angular-aria"
+      ]
+    },
+    "angularfire": {
+      "exports": "angularfire",
+      "depends": [
+        "angular",
+        "firebase"
       ]
     }
   }
