--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,8 @@
     "angular-material": "master",
     "angularfire": "~0.9.2",
     "hammerjs": "~2.0.4",
-    "mdi": "master"
+    "mdi": "master",
+    "angular-youtube-mb": "~0.1.6"
   },
   "resolutions": {
     "angular": "1.3.6"
