--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,8 @@
     "angularfire": "~0.9.2",
     "hammerjs": "~2.0.4",
     "mdi": "master",
-    "angular-youtube-mb": "~0.1.6"
+    "angular-youtube-mb": "~0.1.6",
+    "angular-masonry": "~0.11.0"
   },
   "resolutions": {
     "angular": "1.3.6"
