--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "ngMaterial": "./bower_components/angular-material/angular-material.min.js",
     "angularfire": "./bower_components/angularfire/dist/angularfire.min.js",
     "firebase": "./bower_components/firebase/firebase.js",
+    "angular-embedly": "./bower_components/angular-embedly/angular-embedly.js",
     "angular-youtube-mb": "./bower_components/angular-youtube-mb/dist/angular-youtube-embed.min.js"
   },
   "browserify": {
