--- a/bower.json
+++ b/bower.json
@@ -9,18 +9,19 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "1.3.6",
-    "angular-mocks": "1.3.6",
-    "angular-animate": "1.3.6",
-    "angular-sanitize": "1.3.6",
+    "angular": "1.3.12",
+    "angular-mocks": "1.3.12",
+    "angular-animate": "1.3.12",
+    "angular-sanitize": "1.3.12",
     "angular-ui-router": "0.2.13",
     "angular-material": "master",
     "angularfire": "~0.9.2",
     "hammerjs": "~2.0.4",
     "mdi": "master",
-    "angular-youtube-mb": "~0.1.6"
+    "angular-youtube-mb": "~0.1.6",
+    "angular-embedly": "~0.0.6"
   },
   "resolutions": {
-    "angular": "1.3.6"
+    "angular": "1.3.x"
   }
 }
