--- a/package.json
+++ b/package.json
@@ -101,7 +101,9 @@
     "firebase": "./bower_components/firebase/firebase.js",
     "angular-embedly": "./bower_components/angular-embedly/em-minified/angular-embedly.min.js",
     "angular-youtube-mb": "./bower_components/angular-youtube-mb/dist/angular-youtube-embed.min.js",
-    "angular-locker": "./bower_components/angular-locker/dist/angular-locker.min.js"
+    "angular-locker": "./bower_components/angular-locker/dist/angular-locker.min.js",
+    "ngImgur": "./bower_components/ng-imgur/dist/ng-imgur.js",
+    "sinon": "./bower_components/sinon/lib/sinon.js"
   },
   "browserify": {
     "transform": [
@@ -156,6 +158,14 @@
       "exports": "angular-locker",
       "depends": [
         "angular"
+      ]
+    },
+    "ngImgur": {
+      "exports": "ngImgur",
+      "depends": [
+        "angular",
+        "angular-mocks",
+        "sinon"
       ]
     }
   }
