--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,8 @@
     "angular-youtube-mb": "~0.1.6",
     "angular-embedly": "~0.0.6",
     "angular-locker": "~1.2.0",
-    "ng-imgur": "~0.1.4"
+    "ng-imgur": "~0.1.4",
+    "angular-google-maps": "~2.0.12"
   },
   "resolutions": {
     "angular": "1.3.12",
