--- a/bower.json
+++ b/bower.json
@@ -22,7 +22,10 @@
     "angular-embedly": "~0.0.6",
     "angular-locker": "~1.2.0",
     "ng-imgur": "~0.1.4",
-    "angular-google-maps": "~2.0.12"
+    "angular-google-maps": "~2.0.12",
+    "angular-bootstrap": "~0.12.1",
+    "bootstrap-css-only": "~3.3.2",
+    "datejs": "~1.0.0-rc3"
   },
   "resolutions": {
     "angular": "1.3.12",
