working on angular-maps

--- a/package.json
+++ b/package.json
@@ -176,6 +176,9 @@
         "lodash"
       ]
     },
+    "lodash": {
+      "exports": "lodash"
+    },
     "ngBootstrap": {
       "exports": "ngBootstrap",
       "depends": [
